[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["karthikeya pervela <69100096+pkarthikeya1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
nltk = "^3.9.1"
gensim = "^4.3.3"
smart-open = {extras = ["http"], version = "^7.0.4"}
streamlit = "^1.38.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
